--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -23,7 +23,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        conda env update --file environment.yml --name base
+        conda install -y flake8 pytest
+        # Add other conda or pip install commands as necessary
     
     - name: Run Python script
       run: |
@@ -31,7 +32,6 @@ jobs:
     
     - name: Lint with flake8
       run: |
-        conda install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -39,5 +39,4 @@ jobs:
     
     - name: Test with pytest
       run: |
-        conda install pytest
         pytest
