--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda install -y flake8 pytest pandas
-        pip install scikit-learn matplotlib seaborn
+        pip install scikit-learn matplotlib seaborn streamlit
         # Add any other necessary libraries here
     
     - name: Run Python script
