--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -26,6 +26,10 @@ jobs:
         conda install -y flake8 pytest pandas
         pip install scikit-learn matplotlib seaborn streamlit
     
+    - name: Download dataset from another repository
+      run: |
+        curl -L -o creditcard.csv "https://raw.githubusercontent.com/RaimbekovA/bank-card-fraud-detection-using-machine-learning/main/CCFD%20v.2/creditcard.csv"
+    
     - name: Run Python script
       run: |
         python newcode.py
